--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
 
 # Core sources
-add_library(HydrogenCore STATIC
+set(HydrogenCore_Sources 
 
             # Core
             src/actorspecasset.cc include/core/actorspecasset.h
@@ -17,6 +17,7 @@ add_library(HydrogenCore STATIC
             src/system.cc include/core/system.h
             src/systems.cc include/core/systems.h
             src/scenespecasset.cc include/core/scenespecasset.h
+            src/serverengine.cc include/core/serverengine.h
             src/transform.cc include/core/transform.h
             src/window.cc include/core/window.h
 
@@ -37,30 +38,31 @@ add_library(HydrogenCore STATIC
             src/systems/script/scriptcomp.cc include/core/systems/script/scriptcomp.h
             src/systems/script/scripting.cc include/core/systems/script/scripting.h
             src/systems/render/meshcomp.cc include/core/systems/render/meshcomp.h
-            include/core/input/input.h
+            src/systems/render/gles3renderer.cc include/core/systems/render/gles3renderer.h
+            src/systems/render/gl4renderer.cc include/core/systems/render/gl4renderer.h
+            
+            # Input
             include/core/input/inputactionsource.h
             include/core/input/keyinputactionsource.h
-            src/input/input.cc
-            src/input/keyinputactionsource.cc
+            src/input/input.cc include/core/input/input.h
+            src/input/keyinputactionsource.cc 
             include/core/project/projectactionentry.h
-            include/core/input/inputaction.h
-            src/input/inputaction.cc
-            include/core/input/dualkeyinputactionsource.h
-            src/input/dualkeyinputactionsource.cc
-            include/core/systems/render/gles3renderer.h
-            src/systems/render/gles3renderer.cc
-            include/core/systems/render/gl4renderer.h
-            src/systems/render/gl4renderer.cc
-
+            src/input/inputaction.cc include/core/input/inputaction.h
+            src/input/dualkeyinputactionsource.cc include/core/input/dualkeyinputactionsource.h
 )
+
+add_library(HydrogenCore STATIC ${HydrogenCore_Sources})
+add_library(HydrogenCore_Shared SHARED ${HydrogenCore_Sources})
 if (MSVC)
     set(CMAKE_EXE_LINKER_FLAGS
         "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:library")
 endif ()
 target_compile_definitions(HydrogenCore PRIVATE "HCORE_DEBUG=$<IF:$<CONFIG:Debug>,1,0>")
+target_compile_definitions(HydrogenCore_Shared PRIVATE "HCORE_DEBUG=$<IF:$<CONFIG:Debug>,1,0>")
 
 # Core include dir
 target_include_directories(HydrogenCore PUBLIC include)
+target_include_directories(HydrogenCore_Shared PUBLIC include)
 
 # AngelScript
 add_subdirectory(external/angelscriptsdk/angelscript/projects/cmake)
@@ -71,7 +73,10 @@ target_include_directories(HydrogenCore_AngelScriptExtensions PUBLIC
                            external/angelscriptsdk/add_on/scriptstdstring/
                            )
 target_link_libraries(HydrogenCore_AngelScriptExtensions PUBLIC angelscript)
+
 target_link_libraries(HydrogenCore PUBLIC HydrogenCore_AngelScriptExtensions)
+target_link_libraries(HydrogenCore_Shared PUBLIC HydrogenCore_AngelScriptExtensions)
+
 set_target_properties(angelscript PROPERTIES FOLDER "Vendored/AngelScript")
 set_target_properties(HydrogenCore_AngelScriptExtensions PROPERTIES FOLDER "Vendored/AngelScript")
 
@@ -91,15 +96,18 @@ add_subdirectory(external/SDL EXCLUDE_FROM_ALL)
 if (TARGET SDL2::SDL2-static)
     message(STATUS "(HydrogenCore) Using SDL2 static")
     target_link_libraries(HydrogenCore PUBLIC SDL2::SDL2-static)
+    target_link_libraries(HydrogenCore_Shared PUBLIC SDL2::SDL2-static)
     set_target_properties(SDL2-static PROPERTIES FOLDER "Vendored/SDL")
 endif()
 if (TARGET SDL2::SDL2-shared)
     message(STATUS "(HydrogenCore) Using SDL2 shared")
     target_link_libraries(HydrogenCore PUBLIC SDL2::SDL2-shared)
+    target_link_libraries(HydrogenCore_Shared PUBLIC SDL2::SDL2-shared)
     set_target_properties(SDL2 PROPERTIES FOLDER "Vendored/SDL")
 endif()
 if (TARGET SDL2::SDL2main)
     target_link_libraries(HydrogenCore PRIVATE SDL2::SDL2main)
+    target_link_libraries(HydrogenCore_Shared PRIVATE SDL2::SDL2main)
     set_target_properties(SDL2main PROPERTIES FOLDER "Vendored/SDL")
 endif ()
 
@@ -112,9 +120,11 @@ endif ()
 # OpenGL
 if (DEFINED ANDROID)
     target_link_libraries(HydrogenCore PUBLIC GLESv3 ${log-lib})
+    target_link_libraries(HydrogenCore_Shared PUBLIC GLESv3 ${log-lib})
 else ()
     find_package(OpenGL REQUIRED)
     target_link_libraries(HydrogenCore PUBLIC ${OPENGL_LIBRARIES})
+    target_link_libraries(HydrogenCore_Shared PUBLIC ${OPENGL_LIBRARIES})
 endif ()
 
 # GLM
@@ -126,7 +136,10 @@ endif ()
 
 # GLAD
 add_subdirectory(external/glad)
+
 target_link_libraries(HydrogenCore PUBLIC glad)
+target_link_libraries(HydrogenCore_Shared PUBLIC glad)
+
 set_target_properties(glad PROPERTIES FOLDER "Vendored/glad")
 
 # ImGui integrations
@@ -134,8 +147,15 @@ add_subdirectory(external/imgui.cmake EXCLUDE_FROM_ALL)
 target_link_libraries(HydrogenCore PUBLIC imgui.cmake)
 target_include_directories(HydrogenCore PRIVATE external/sdl-imgui)
 target_include_directories(HydrogenCore PRIVATE external/opengl-imgui)
+target_link_libraries(HydrogenCore_Shared PUBLIC imgui.cmake)
+target_include_directories(HydrogenCore_Shared PRIVATE external/sdl-imgui)
+target_include_directories(HydrogenCore_Shared PRIVATE external/opengl-imgui)
 
 target_sources(HydrogenCore PRIVATE
+               external/sdl-imgui/imgui_impl_sdl2.cpp
+               external/opengl-imgui/imgui_impl_opengl3.cpp
+               )
+target_sources(HydrogenCore_Shared PRIVATE
                external/sdl-imgui/imgui_impl_sdl2.cpp
                external/opengl-imgui/imgui_impl_opengl3.cpp
                )
@@ -147,7 +167,9 @@ set(TINYGLTF_INSTALL OFF)
 set(TINYGLTF_HEADER_ONLY OFF)
 set(TINYGLTF_BUILD_LOADER_EXAMPLE OFF)
 add_subdirectory(external/tinygltf EXCLUDE_FROM_ALL)
+
 target_link_libraries(HydrogenCore PUBLIC tinygltf)
+target_link_libraries(HydrogenCore_Shared PUBLIC tinygltf)
 
 set_target_properties(tinygltf PROPERTIES FOLDER "Vendored/tinygltf")
 
@@ -157,10 +179,12 @@ set(YAML_CPP_FORMAT_SOURCE OFF)
 set(YAML_CPP_INSTALL OFF)
 set(YAML_CPP_BUILD_TOOLS OFF)
 add_subdirectory(external/yaml-cpp EXCLUDE_FROM_ALL)
-set_target_properties(yaml-cpp PROPERTIES FOLDER "Vendored/yaml-cpp")
-set_target_properties(uninstall PROPERTIES FOLDER "Vendored/yaml-cpp/misc")
 
 target_link_libraries(HydrogenCore PUBLIC yaml-cpp::yaml-cpp)
+target_link_libraries(HydrogenCore_Shared PUBLIC yaml-cpp::yaml-cpp)
+
+set_target_properties(yaml-cpp PROPERTIES FOLDER "Vendored/yaml-cpp")
+set_target_properties(uninstall PROPERTIES FOLDER "Vendored/yaml-cpp/misc")
 
 # generated shader code
 function(HydrogenCore_CopyShaders folder)
@@ -181,6 +205,7 @@ function(HydrogenCore_CopyShaders folder)
     endif()
 
     add_dependencies(HydrogenCore HydrogenCore_CopyShaders)
+    add_dependencies(HydrogenCore_Shared HydrogenCore_CopyShaders)
     set_target_properties(HydrogenCore_CopyShaders PROPERTIES FOLDER "HyCoreSupport")
 endfunction()
 
