--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_library(HydrogenServer_Wrapper SHARED wrap/wrap.cc)
 target_link_libraries(HydrogenServer_Wrapper PUBLIC HydrogenCore)
 
-add_custom_target(HydrogenServer_Assets
-                      COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/assets $<TARGET_FILE:HydrogenServer_Wrapper>/assets
-    )
-# add_dependencies(HydrogenServer_Wrapper HydrogenServer_Assets)
+add_custom_target(
+        HydrogenServer
+        ${Python3_EXECUTABLE} ${CMAKE_CURRENT_LIST_DIR}/main.py $<TARGET_FILE:HydrogenServer_Wrapper>
+        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+        DEPENDS HydrogenServer_Wrapper
+)
