removed excess libcurl targets

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -83,6 +83,7 @@ set_target_properties(HydrogenCore_AngelScriptExtensions PROPERTIES FOLDER "Vend
 set(ENABLE_CURL_MANUAL OFF)
 set(BUILD_LIBCURL_DOCS OFF)
 set(CURL_USE_LIBPSL OFF)
+set(CURL_DISABLE_TESTS ON)
 add_subdirectory(external/curl)
 target_link_libraries(HydrogenCore PUBLIC libcurl)
 
