added start of physics (again...)

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -53,7 +53,7 @@ set(HydrogenCore_Sources
 add_library(HydrogenCore STATIC ${HydrogenCore_Sources}
         include/core/netrequestthreadcontext.h
         include/core/netrequestjob.h
-        include/core/assetindex.h)
+        include/core/assetindex.h include/core/physics/physics.h src/physics/physics.cc include/core/physics/rigidbodyasset.h include/core/physics/rigidbodycomp.h src/physics/rigidbodyasset.cc src/physics/rigidbodycomp.cc)
 add_library(HydrogenCore_Shared SHARED ${HydrogenCore_Sources})
 if (MSVC)
     set(CMAKE_EXE_LINKER_FLAGS
