--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(HydrogenServer_Wrapper SHARED wrap/wrap.cc)
 target_link_libraries(HydrogenServer_Wrapper PUBLIC HydrogenCore)
 
-find_package(Python3 REQUIRED)
+#find_package(Python3 REQUIRED)
 message(STATUS "(HydrogenServer) Have Python3 Executable: ${Python3_EXECUTABLE}")
 #if (NOT DEFINED ${Python3_EXECUTABLE})
 #    message(FATAL_ERROR "(HydrogenServer) No Python3 Executable specified.")
