--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -15,7 +15,7 @@ set(HydrogenCore_Sources
             src/runtimeengine.cc include/core/runtimeengine.h
             src/scene.cc include/core/scene.h
             src/system.cc include/core/system.h
-            src/systems.cc include/core/systems.h
+        src/runtimesystems.cc include/core/runtimesystems.h
             src/scenespecasset.cc include/core/scenespecasset.h
             src/transform.cc include/core/transform.h
             src/window.cc include/core/window.h
@@ -53,7 +53,10 @@ set(HydrogenCore_Sources
 add_library(HydrogenCore STATIC ${HydrogenCore_Sources}
         include/core/netrequestthreadcontext.h
         include/core/netrequestjob.h
-        include/core/assetindex.h)
+        include/core/assetindex.h
+        include/core/component.h
+        include/core/widgets.h
+        include/core/netrequestresult.h)
 add_library(HydrogenCore_Shared SHARED ${HydrogenCore_Sources})
 if (MSVC)
     set(CMAKE_EXE_LINKER_FLAGS
