--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.21)
 
-add_executable(HydrogenEditor src/main.cc)
+add_executable(HydrogenEditor src/main.cc
+        src/editorengine.cc)
+
+target_include_directories(HydrogenEditor PUBLIC include)
 
 target_link_libraries(HydrogenEditor PUBLIC HydrogenCore)
 
