imgui mesh asset info

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -64,8 +64,7 @@ set(HydrogenCore_Sources
             src/input/dualkeyinputactionsource.cc include/core/input/dualkeyinputactionsource.h
 )
 
-add_library(HydrogenCore STATIC ${HydrogenCore_Sources}
-        )
+add_library(HydrogenCore STATIC ${HydrogenCore_Sources})
 add_library(HydrogenCore_Shared SHARED ${HydrogenCore_Sources})
 if (MSVC)
     set(CMAKE_EXE_LINKER_FLAGS
