--- a/runtime/assets/project.yml
+++ b/runtime/assets/project.yml
@@ -15,12 +15,13 @@ assets:
   - index: 2
     type: 2
     path: "assets/test_script.yml"
-#  - index: 3
-#    type: 3
-#    path: "assets/test_model.yml"
+  - index: 3
+    type: 3
+    path: "assets/test_model.yml"
+    # remote: true
   - index: 40
     type: 3
-#    path: "assets/test_model2.yml"
+    # path: "assets/test_model2.yml"
     remote: true
   - index: 7
     type: 0
