--- a/server/assets/project.yml
+++ b/server/assets/project.yml
@@ -15,9 +15,9 @@ assets:
   - index: 2
     type: 2
     path: "assets/test_script.yml"
-#  - index: 3
-#    type: 3
-#    path: "assets/test_model.yml"
+  - index: 3
+    type: 3
+    path: "assets/test_model.yml"
   - index: 40
     type: 3
     path: "assets/test_model2.yml"
