log level coloring and filtering

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -5,7 +5,11 @@ if (DEFINED ANDROID)
     add_library(HydrogenRuntime SHARED src/main.cc)
     message(STATUS "(HydrogenRuntime) .so placed @ $<TARGET_FILE:HydrogenRuntime>")
 else ()
-    add_executable(HydrogenRuntime src/main.cc)
+    if (MSVC)
+        add_executable(HydrogenRuntime WIN32 src/main.cc)
+    else ()
+        add_executable(HydrogenRuntime src/main.cc)
+    endif ()
 endif ()
 
 target_link_libraries(HydrogenRuntime PUBLIC HydrogenCore)
