--- a/runtime/assets/test_actor.yml
+++ b/runtime/assets/test_actor.yml
@@ -1,4 +1,4 @@
-mask: 7
+mask: 15
 transform:
   position:
     x: 0
@@ -17,3 +17,5 @@ model:
   index: 40
 script:
   index: 2
+rigidbody:
+  index: 73
