--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(ALLOW_DUPLICATE_CUSTOM_TARGETS ON)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 add_subdirectory(core) # core library of common components
-# add_subdirectory(editor) # editor GUI
-add_subdirectory(runtime) # runtime code
+add_subdirectory(editor) # editor GUI
+#add_subdirectory(runtime) # runtime code
 
 add_subdirectory(server) # server code, specifically core library generation
