--- a/server/assets/project.yml
+++ b/server/assets/project.yml
@@ -15,12 +15,12 @@ assets:
   - index: 2
     type: 2
     path: "assets/test_script.yml"
-  - index: 3
-    type: 3
-    path: "assets/test_model.yml"
+  # - index: 3
+  #   type: 3
+  #   path: "assets/test_model.yml"
   - index: 40
     type: 3
-    path: "assets/test_model2.yml"
+    path: "assets/test_model.yml"
   - index: 7
     type: 0
     path: "assets/test_scene.yml"
