[nobuild] server rewrite

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,16 +1,20 @@
-add_library(HydrogenServer_Wrapper SHARED wrap/wrap.cc)
-target_link_libraries(HydrogenServer_Wrapper PUBLIC HydrogenCore)
 
-#find_package(Python3 REQUIRED)
-message(STATUS "(HydrogenServer) Have Python3 Executable: ${Python3_EXECUTABLE}")
-#if (NOT DEFINED ${Python3_EXECUTABLE})
-#    message(FATAL_ERROR "(HydrogenServer) No Python3 Executable specified.")
-#endif()
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_CURRENT_BINARY_DIR}>)
+
+add_executable(HydrogenServer
+        src/main.cc)
 
 
-add_custom_target(
-        HydrogenServer
-#        ${Python3_EXECUTABLE} ${CMAKE_CURRENT_LIST_DIR}/main.py $<TARGET_FILE:HydrogenServer_Wrapper>
-        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
-        DEPENDS HydrogenServer_Wrapper
+add_subdirectory(external/httplib)
+set(HTTPLIB_INSTALL OFF)
+set(HTTPLIB_NO_EXCEPTIONS ON)
+target_link_libraries(HydrogenServer PUBLIC httplib::httplib)
+set_target_properties(httplib PROPERTIES FOLDER "Vendored/httplib")
+
+target_link_libraries(HydrogenServer PUBLIC HydrogenCore)
+
+add_custom_target(HydrogenServer_Assets
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/assets ${CMAKE_CURRENT_BINARY_DIR}/assets
 )
+set_target_properties(HydrogenServer_Assets PROPERTIES FOLDER "HyServerSupport")
+add_dependencies(HydrogenServer HydrogenServer_Assets)
