[nobuild] asset server address

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set (CMAKE_CXX_STANDARD 17)
 set(ALLOW_DUPLICATE_CUSTOM_TARGETS ON)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-set(HYCORE_HEADLESS ON)
+#set(HYCORE_HEADLESS ON)
 
 add_subdirectory(core) # core library of common components
 
 #add_subdirectory(editor) # editor GUI
-#add_subdirectory(runtime) # runtime code
-add_subdirectory(server) # server code, specifically core library generation
+add_subdirectory(runtime) # runtime code
+#add_subdirectory(server) # server code, specifically core library generation
