--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -74,7 +74,9 @@ set(HydrogenCore_Sources
         src/input/dualkeyinputactionsource.cc include/core/input/dualkeyinputactionsource.h
 )
 
-add_library(HydrogenCore STATIC ${HydrogenCore_Sources})
+add_library(HydrogenCore STATIC ${HydrogenCore_Sources}
+        include/core/physics/raycast.h
+        src/physics/raycast.cc)
 add_library(HydrogenCore_Shared SHARED ${HydrogenCore_Sources})
 if (HYCORE_HEADLESS)
     target_compile_definitions(HydrogenCore PUBLIC HYCORE_HEADLESS=1)
