[nobuild] bulk add to project

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable(HydrogenEditor src/main.cc
         src/platform/win32/environment_win32.cc
         include/editor/platform/invoke.h
         src/platform/win32/invoke_win32.cc
+        include/editor/windows/sceneeditor.h
+        src/windows/sceneeditor.cc
 )
 
 target_include_directories(HydrogenEditor PUBLIC include)
