[nobuild] beginnings of distance based server loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 add_subdirectory(core) # core library of common components
 
-add_subdirectory(editor) # editor GUI
-#add_subdirectory(runtime) # runtime code
+#add_subdirectory(editor) # editor GUI
+add_subdirectory(runtime) # runtime code
 #add_subdirectory(server) # server code, specifically core library generation
